#
# Copyright (c) 2025 Nordic Semiconductor ASA
#
# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
#

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(test_ble_dis)

set(SOFTDEVICE_VARIANT "s115")
set(SOFTDEVICE_INCLUDE_DIR
  "${ZEPHYR_NRF_BM_MODULE_DIR}/components/softdevice/\
${SOFTDEVICE_VARIANT}/${SOFTDEVICE_VARIANT}_API/include"
)

cmock_handle(${SOFTDEVICE_INCLUDE_DIR}/ble_gatts.h)

target_compile_definitions(app PRIVATE
  NRF54L15_XXAA
  SVCALL_AS_NORMAL_FUNCTION
  SUPPRESS_INLINE_IMPLEMENTATION
  CONFIG_NRF_SDH_BLE_GATT_MAX_MTU_SIZE=498
  CONFIG_NRF_SDH_BLE_TOTAL_LINK_COUNT=1
  CONFIG_BLE_DIS_MANUFACTURER_NAME="Manufacturer"
  CONFIG_BLE_DIS_MODEL_NUMBER="Model"
  CONFIG_BLE_DIS_SERIAL_NUMBER="Serial"
  CONFIG_BLE_DIS_HW_REVISION="HWrev"
  CONFIG_BLE_DIS_FW_REVISION="FWrev"
  CONFIG_BLE_DIS_SW_REVISION="SWrev"
  CONFIG_BLE_DIS_SYSTEM_ID=1
  CONFIG_BLE_DIS_SYSTEM_ID_OUI=0x010203
  CONFIG_BLE_DIS_SYSTEM_ID_MID=0x1112131415
  CONFIG_BLE_DIS_PNP_ID=1
  CONFIG_BLE_DIS_PNP_VID_SRC=0x01
  CONFIG_BLE_DIS_PNP_VID=0x0203
  CONFIG_BLE_DIS_PNP_PID=0x0405
  CONFIG_BLE_DIS_PNP_VER=0x0607
  CONFIG_BLE_DIS_REGULATORY_CERT=1
  CONFIG_BLE_DIS_REGULATORY_CERT_LIST=0x0102030405060708
  CONFIG_BLE_DIS_CHAR_SEC_MODE=0x11
)

target_include_directories(app PRIVATE
  ${ZEPHYR_NRF_BM_MODULE_DIR}/include
  ${SOFTDEVICE_INCLUDE_DIR}
  ${ZEPHYR_HAL_NORDIC_MODULE_DIR}/nrfx/mdk
)

# Generate and add test file
test_runner_generate(src/unity_test.c)
target_sources(app PRIVATE src/unity_test.c)

# Unit under test
target_sources(app PRIVATE
  ${ZEPHYR_NRF_BM_MODULE_DIR}/subsys/bluetooth/services/ble_dis/dis.c
)
